--- a/index.html
+++ b/index.html
@@ -14,29 +14,76 @@
             color: black; /* Color de letra */
         }
         h1 { 
-            color: #4CAF50; 
+            color: black; /* Color del título cambiado a negro */
         }
         p { 
             font-size: 18px; 
             line-height: 1.5; /* Espaciado entre líneas para mayor legibilidad */
         }
+        .strikethrough {
+            text-decoration: line-through; /* Efecto de tachado */
+        }
     </style>
 </head>
 <body>
-    <h1>Hola Yin <3,</h1>
+    <h1>Hola Yin ❤️,</h1>
     <p id="typed-text"></p>
-    <p>Con cariño,<br>Mauricio</p>
+    <p>Con cariño,<br>Mauricio ✨️</p>
+    <p id="strikethrough-text" style="color: black;"></p> <!-- Línea adicional para el efecto de tachado -->
 
     <script>
-        const text = "Posiblemente veas esto por la mañana o casi medio día, me tomé el tiempo de hacer esto para ti porque por supuesto lo vales, esto es un nada al lado de ese 'lo vales' pero este mensajito sería extremadamente largo y perdería la intención jajaja, es muy lindo conocer personas como tú, me refiero a una conexión muy extraña pero de ahí viene lo lindo <3";
+        const text = "Posiblemente veas esto por la mañana o casi medio día, me tomé el tiempo de hacer esto para ti porque por supuesto lo vales, esto es un nada al lado de ese 'lo vales' pero este mensajito sería extremadamente largo y perdería la intención jajaja, es muy lindo conocer personas como tú, me refiero a una conexión muy extraña pero de ahí viene lo lindo 💖";
+        const strikethroughMessage = "Hoy me parece fue una gran idea escribirte"; // Mensaje para el efecto de tachado
         let index = 0;
 
         function typeText() {
             if (index < text.length) {
                 document.getElementById("typed-text").innerHTML += text.charAt(index);
                 index++;
-                setTimeout(typeText, 50); // Cambia el número para ajustar la velocidad
+                setTimeout(typeText, 100); // Velocidad de aparición
+            } else {
+                // Una vez que se ha escrito todo el texto, comienza a mostrar el texto con tachado
+                setTimeout(() => {
+                    displayStrikethroughText();
+                }, 500); // Espera un momento antes de mostrar la línea
             }
+        }
+
+        function displayStrikethroughText() {
+            const strikethroughElement = document.getElementById("strikethrough-text");
+            let strikeIndex = 0;
+
+            // Función de máquina de escribir para la línea de tachado
+            const interval = setInterval(() => {
+                if (strikeIndex < strikethroughMessage.length) {
+                    strikethroughElement.innerHTML += strikethroughMessage.charAt(strikeIndex);
+                    strikeIndex++;
+                } else {
+                    clearInterval(interval);
+                    setTimeout(() => {
+                        // Comienza a tachar el texto
+                        strikeThroughText(strikethroughElement);
+                    }, 500); // Espera un momento antes de tachar
+                }
+            }, 100); // Velocidad de aparición
+        }
+
+        function strikeThroughText(element) {
+            const fullText = element.innerHTML;
+            let strikeIndex = 0;
+
+            const interval = setInterval(() => {
+                if (strikeIndex < fullText.length) {
+                    element.innerHTML = fullText.slice(0, strikeIndex) + 
+                        '<span class="strikethrough">' + fullText.slice(strikeIndex) + '</span>';
+                    strikeIndex++;
+                } else {
+                    clearInterval(interval);
+                    setTimeout(() => {
+                        element.innerHTML = ''; // Borra el texto después de tacharlo
+                    }, 1000); // Espera 1 segundo antes de borrar
+                }
+            }, 100); // Velocidad de tachado
         }
 
         typeText(); // Inicia la función al cargar la página
