--- a/index.html
+++ b/index.html
@@ -22,18 +22,41 @@
         }
         .strikethrough {
             text-decoration: line-through; /* Efecto de tachado */
+            position: relative;
+            display: inline-block;
+            overflow: hidden; /* Esconde el contenido que sobresale */
+        }
+        .marker {
+            background-color: #FFC0CB; /* Color de "marcador" */
+            position: absolute;
+            height: 100%;
+            width: 100%;
+            top: 0;
+            left: 0;
+            transform: translateY(-100%); /* Inicialmente fuera de la vista */
+            transition: transform 1s ease; /* Animación de deslizamiento */
+        }
+        .fade-in {
+            opacity: 0;
+            animation: fadeIn 1s forwards; /* Animación de aparición */
+        }
+        @keyframes fadeIn {
+            to {
+                opacity: 1;
+            }
         }
     </style>
 </head>
 <body>
     <h1>Hola Yin ❤️,</h1>
     <p id="typed-text"></p>
-    <p>Con cariño,<br>Mauricio ✨️</p>
     <p id="strikethrough-text" style="color: black;"></p> <!-- Línea adicional para el efecto de tachado -->
+    <p id="farewell" class="fade-in"></p> <!-- Mensaje de despedida con animación -->
 
     <script>
         const text = "Posiblemente veas esto por la mañana o casi medio día, me tomé el tiempo de hacer esto para ti porque por supuesto lo vales, esto es un nada al lado de ese 'lo vales' pero este mensajito sería extremadamente largo y perdería la intención jajaja, es muy lindo conocer personas como tú, me refiero a una conexión muy extraña pero de ahí viene lo lindo 💖";
         const strikethroughMessage = "Hoy me parece fue una gran idea escribirte"; // Mensaje para el efecto de tachado
+        const farewellMessage = "Con cariño, Mauricio ✨️"; // Mensaje de despedida
         let index = 0;
 
         function typeText() {
@@ -51,42 +74,32 @@
 
         function displayStrikethroughText() {
             const strikethroughElement = document.getElementById("strikethrough-text");
-            let strikeIndex = 0;
+            strikethroughElement.innerHTML = strikethroughMessage;
 
-            // Función de máquina de escribir para la línea de tachado
-            const interval = setInterval(() => {
-                if (strikeIndex < strikethroughMessage.length) {
-                    strikethroughElement.innerHTML += strikethroughMessage.charAt(strikeIndex);
-                    strikeIndex++;
-                } else {
-                    clearInterval(interval);
-                    setTimeout(() => {
-                        // Comienza a tachar el texto
-                        strikeThroughText(strikethroughElement);
-                    }, 500); // Espera un momento antes de tachar
-                }
-            }, 100); // Velocidad de aparición
+            // Añadir el "marcador" para el efecto de tachado
+            const marker = document.createElement('div');
+            marker.className = 'marker';
+            strikethroughElement.appendChild(marker);
+
+            // Iniciar la animación de tachado
+            setTimeout(() => {
+                marker.style.transform = 'translateY(0)'; // Deslizar hacia abajo para tachar
+            }, 100); // Espera un momento antes de comenzar a tachar
+
+            // Esperar a que termine el efecto de tachado y luego mostrar el mensaje de despedida
+            setTimeout(() => {
+                strikethroughElement.innerHTML = ''; // Borra el texto después de tacharlo
+                displayFarewellMessage(); // Muestra el mensaje de despedida
+            }, 2000); // Tiempo para el efecto de tachado
         }
 
-        function strikeThroughText(element) {
-            const fullText = element.innerHTML;
-            let strikeIndex = 0;
-
-            const interval = setInterval(() => {
-                if (strikeIndex < fullText.length) {
-                    element.innerHTML = fullText.slice(0, strikeIndex) + 
-                        '<span class="strikethrough">' + fullText.slice(strikeIndex) + '</span>';
-                    strikeIndex++;
-                } else {
-                    clearInterval(interval);
-                    setTimeout(() => {
-                        element.innerHTML = ''; // Borra el texto después de tacharlo
-                    }, 1000); // Espera 1 segundo antes de borrar
-                }
-            }, 100); // Velocidad de tachado
+        function displayFarewellMessage() {
+            const farewellElement = document.getElementById("farewell");
+            farewellElement.innerHTML = farewellMessage; // Establece el mensaje de despedida
+            farewellElement.classList.add('fade-in'); // Añadir la clase de animación de desvanecimiento
         }
 
         typeText(); // Inicia la función al cargar la página
     </script>
 </body>
-</html>
+</html
