--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -21,20 +22,18 @@
             line-height: 1.5; /* Espaciado entre líneas para mayor legibilidad */
         }
         .strikethrough {
-            text-decoration: line-through; /* Efecto de tachado */
             position: relative;
             display: inline-block;
-            overflow: hidden; /* Esconde el contenido que sobresale */
         }
         .marker {
-            background-color: #FFC0CB; /* Color de "marcador" */
+            background-color: black; /* Color del marcador negro */
             position: absolute;
-            height: 100%;
+            height: 10px; /* Altura del marcador */
             width: 100%;
-            top: 0;
+            top: 50%; /* Centrado verticalmente */
             left: 0;
-            transform: translateY(-100%); /* Inicialmente fuera de la vista */
-            transition: transform 1s ease; /* Animación de deslizamiento */
+            transform: translateY(-50%); /* Ajusta para que esté centrado */
+            transition: height 1s ease; /* Animación de deslizamiento */
         }
     </style>
 </head>
@@ -74,7 +73,7 @@
 
             // Iniciar la animación de tachado
             setTimeout(() => {
-                marker.style.transform = 'translateY(0)'; // Deslizar hacia abajo para tachar
+                marker.style.height = '10px'; // Asegura que el marcador cubra el texto
             }, 100); // Espera un momento antes de comenzar a tachar
 
             // Esperar a que termine el efecto de tachado y luego mostrar el mensaje de despedida
