--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </style>
 </head>
 <body>
-    <h1>Hola Yin ❤️.</h1>
+    <h1>Hola Yin 🫶🏻 </h1>
     <p id="typed-text"></p>
     <p id="strikethrough-text" style="color: black; display: none;"></p> <!-- Línea adicional para el efecto de tachado -->
     <p id="farewell" style="color: black;"></p> <!-- Mensaje de despedida -->
