--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </style>
 </head>
 <body>
-    <h1>Hola Yin ❤️</h1>
+    <h1>Hola Yin 🌷</h1>
     <p id="typed-text"></p>
     <p id="farewell" style="color: black;"></p> <!-- Mensaje de despedida -->
     <p id="today-text" class="centered" style="display: none; margin-top: 20px;"></p> <!-- Texto "Hoy me parece..." -->
