--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Para Yin</title>
+    <title>Para Kat</title>
     <style>
         body { 
             font-family: Arial, sans-serif; 
@@ -27,14 +27,14 @@
     </style>
 </head>
 <body>
-    <h1>Hola Yin 🌷</h1>
+    <h1>Hola Kat 🌷</h1>
     <p id="typed-text"></p>
     <p id="farewell" style="color: black;"></p> <!-- Mensaje de despedida -->
     <p id="today-text" class="centered" style="display: none; margin-top: 20px;"></p> <!-- Texto "Hoy me parece..." -->
 
     <script>
-        const text = "Posiblemente veas esto por la mañana o casi medio día, entonces buenos diasss ☀️ espero durmieras bieen, me tomé el tiempo de hacer esto para ti, porque realmente me quedé toda la tarde pensando en lo mucho que me gusta el compartir tiempo y escucharla, es un algo que no se siente a menudo y por eso me veo en la enorme necesidad de expresarlo con algo como esto que estás leyendo, amo mucho dar detalles y pensé este te gustaría 💖" ;
-        const strikethroughMessage = "Hoy me parece fue una gran idea escribirte"; // Mensaje para mostrar
+        const text = "Me gustaría mucho conocerte mejor, que me conozcas bien, creo podemos llevarnos sumamente bien y posiblemente hacernos bien, amo mucho dar detalles y pensé este te gustaría 💖" ;
+        const strikethroughMessage = "Me parece fue una gran idea escribirte"; // Mensaje para mostrar
         const farewellMessage = "Con cariño, Mauricio ✨️"; // Mensaje de despedida
         let index = 0;
 
